
MovieJukebox 1.0.18 beta
------------------------
  - Enhancement  #154 Better handling for trailers, extras & bonus material for movies and TV series
  - Enhancement  #323 TheMovieDB.org plugin (part 1)
  - Enhancement  #455 Split HD Category into 720 and 1080
  - Enhancement  #506 Setting Video Source in NFO file
  - Enhancement  #530 Move preferences out of the XML files into preferences.xsl
  - Enhancement  #632 Disable OpenSubtitle plugin if Internet scraping is turned off in library.xml
  - Enhancement  #686 Video Image Files created when no image found
  - Enhancement  #836 Option for AppleTrailers to include or exclude trailer types
  - Fixed defect #846 appletrailers.download is case sensitive
  - Fixed defect #850 Exception generated if Jukebox directory can't be written to
  - Fixed defect #851 TV Series dummy thumbnails
  - Fixed defect #852 Kinopoisk fix due to changed web pages
  - Fixed defect #854 m2ts files will not index correctly
  - Fixed defect #857 Apple trailer configMax is not handled correctly
  - Fixed defect #865 New API Key required for MovieMeter plugin
  - Fixed defect #868 Kinopoisk plot fix
  - Fixed defect #869 BluRay movies with multi part files are not scanned correctly
  - Fixed defect #870 MediaInfo mark subtitles YES even if the format can not be viewed
  - Fixed defect #875 IMDB changed the layout for directors and needs to be updated
  - Fixed defect #877 High-Definition Properties (720 or 1080) for Hebrew skin
  - Enhancement  #880 Reject Artwork if it's too low res
  - Enhancement  #883 Ability to re-order poster search sites
  - Fixed defect #886 Wrong IMDB poster in latest poster scanner
  - Fixed defect #890 Other_HD created for non-HD movie
  - Enhancement  #900 Skip index generation and writing of HTML files for external front end users
  - Fixed defect #903 Kinopoisk fixes after site update
  - Enhancement  #905 API Key enhancements
  - Fixed defect #909 Index 2000-2009 is not correct