@@ -9,6 +9,7 @@ MovieJukebox 1.0.18 beta
   - Enhancement  #455 Split HD Category into 720 and 1080
   - Enhancement  #506 Setting Video Source in NFO file
   - Enhancement  #530 Move preferences out of the XML files into preferences.xsl
+  - Enhancement  #595 Manual Language Settings in nfo
   - Enhancement  #632 Disable OpenSubtitle plugin if Internet scraping is turned off in library.xml
   - Enhancement  #686 Video Image Files created when no image found
   - Enhancement  #836 Option for AppleTrailers to include or exclude trailer types
